<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="4dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:textColor="@color/black"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="4dp"
        android:hint="@string/deliveryAddress"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="4dp"
        android:hint="@string/passwordMin4"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="4dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/btnBackground"
        android:padding="6dp"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>