<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour"
    android:orientation="vertical"
    tools:context="com.krishna.foodrunner.activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/order" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/imgLogo"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:textColor="@color/black"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:maxLines="1"
        android:padding="6dp"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/btnBackground"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:padding="6dp"
        android:text="@string/forgetPassword"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>