<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.krishna.foodrunner.activity.ResetPasswordActivity">

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:text="Enter the Received OTP below"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txtInstruction"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/otp"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etOtp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etNewPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@color/btnBackground"
        android:padding="6dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />



    </RelativeLayout>
