<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.krishna.foodrunner.activity.ForgetPasswordActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:padding="6dp"
        android:src="@drawable/order" />
    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="5dp"
        android:textSize="23sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/txtInstruction"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="4dp"
        android:hint="@string/mobileNumber"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_email"
        android:layout_below="@id/etMobileNumber"
        android:drawablePadding="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="6dp"
        android:textColorHint="#9e9e9e"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@color/btnBackground"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>